--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +34,23 @@
   to {
     transform: rotate(360deg);
   }
+}
+label{
+  padding:1rem;
+}
+
+input{
+  margin-left:.5rem;
+}
+select{
+  margin-left:.5rem;
+}
+.submit{
+  text-align:center;
+  margin:auto;
+  padding:.5rem;
+  margin:1rem;
+}
+h1{
+  text-align:center;
 }
